--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "psr/log": "^1.0|^2.0|^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0|^9.0|^10.0",
+        "ext-curl": "*",
+        "ext-json": "*",
+        "phpunit/phpunit": "^8.0|^9.0",
         "symfony/process": "^5.4|^6.2"
     },
     "scripts": {
