--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "ext-curl": "*",
         "ext-json": "*",
         "phpunit/phpunit": "^8.0|^9.0",
-        "symfony/process": "^5.4|^6.2"
+        "symfony/process": "^5.4|^6.2",
+        "amphp/http-client": "^4.2.1"
     },
     "scripts": {
         "test": "phpunit"
