--- a/composer.json
+++ b/composer.json
@@ -24,20 +24,20 @@
         "source": "https://github.com/liborm85/loggable-http-client"
     },
     "provide": {
-        "symfony/http-client-implementation": "2.4",
+        "symfony/http-client-implementation": "3.0",
         "psr/log-implementation": "1.0|2.0|3.0"
     },
     "require": {
-        "php": ">=7.2.5",
-        "symfony/http-client-contracts": "^2.4",
+        "php": ">=8.1",
+        "symfony/http-client-contracts": "^3.0",
         "psr/log": "^1.0|^2.0|^3.0"
     },
     "require-dev": {
         "ext-curl": "*",
         "ext-json": "*",
-        "phpunit/phpunit": "^8.0|^9.0",
-        "symfony/http-client": "^5.4",
-        "symfony/process": "^5.4|^6.2",
+        "phpunit/phpunit": "^10.0",
+        "symfony/http-client": "^6.1",
+        "symfony/process": "^6.1",
         "amphp/http-client": "^4.2.1"
     },
     "suggest": {
