--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     "require-dev": {
         "ext-curl": "*",
         "ext-json": "*",
-        "phpunit/phpunit": "^10.0",
+        "phpunit/phpunit": "^10.5 || ^11.5 || ^12.4",
         "symfony/http-client": "^6.1",
         "symfony/process": "^6.1",
         "amphp/http-client": "^4.2.1"
