--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -13,6 +13,10 @@ jobs:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
         php: [ '8.1', '8.2', '8.3', '8.4' ]
+        symfony: [ '^6.4', '^7.3' ]
+        exclude:
+          - php: '8.1'
+            symfony: '^7.3'
 
     steps:
       - uses: actions/checkout@v2
@@ -24,6 +28,14 @@ jobs:
 
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress
+
+      - name: Override symfony version
+        run: |
+          composer require symfony/http-client:"${{ matrix.symfony }}" --dev --no-update
+          composer update symfony/http-client --prefer-dist --no-progress
+
+          composer require symfony/process:"${{ matrix.symfony }}" --dev --no-update
+          composer update symfony/process --prefer-dist --no-progress
 
       - name: Run PHPUnit
         run: composer test
