--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,8 @@
         "ext-curl": "*",
         "ext-json": "*",
         "phpunit/phpunit": "^10.5 || ^11.5 || ^12.4",
-        "symfony/http-client": "^6.4 || ^7.3",
-        "symfony/process": "^6.4 || ^7.3",
+        "symfony/http-client": "^6.4 || ^7.3 || ^8.0",
+        "symfony/process": "^6.4 || ^7.3 || ^8.0",
         "amphp/http-client": "^4.2.1"
     },
     "suggest": {
